--- a/backend/package.json
+++ b/backend/package.json
@@ -2,17 +2,23 @@
 	"type": "module",
 	"name": "backend",
 	"version": "1.0.0",
-	"main": "index.js",
+	"description": "StartNet backend API",
+	"author": "Henrique Oliveira",
+	"main": "index.ts",
 	"license": "MIT",
 	"scripts": {
 		"develop": "ts-node-dev --ignore-watch node_modules --transpile-only src/index.ts",
+		"start": "NODE_ENV=production ts-node-dev --ignore-watch node_modules --transpile-only src/index.ts",
 		"lint": "yarn eslint src"
 	},
 	"dependencies": {
 		"@types/express": "^4.17.11",
+		"axios": "^0.21.1",
+		"cors": "^2.8.5",
 		"express": "^4.17.1"
 	},
 	"devDependencies": {
+		"@types/cors": "^2.8.10",
 		"@types/node": "^14.14.37",
 		"@typescript-eslint/eslint-plugin": "^4.21.0",
 		"@typescript-eslint/parser": "^4.21.0",
