add startnet database and stablish connection

--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,9 @@
 		"@types/express": "^4.17.11",
 		"axios": "^0.21.1",
 		"cors": "^2.8.5",
-		"express": "^4.17.1"
+		"dotenv": "^9.0.2",
+		"express": "^4.17.1",
+		"mysql2": "^2.2.5"
 	},
 	"devDependencies": {
 		"@types/cors": "^2.8.10",
