--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,9 @@
 		"cors": "^2.8.5",
 		"dotenv": "^9.0.2",
 		"express": "^4.17.1",
-		"mysql2": "^2.2.5"
+		"mysql2": "^2.2.5",
+        "ts-node": "^9.1.1",
+		"ts-node-dev": "^1.1.6"
 	},
 	"devDependencies": {
 		"@types/cors": "^2.8.10",
@@ -28,8 +30,6 @@
 		"eslint-config-prettier": "^8.1.0",
 		"eslint-plugin-prettier": "^3.3.1",
 		"prettier": "^2.2.1",
-		"ts-node": "^9.1.1",
-		"ts-node-dev": "^1.1.6",
 		"typescript": "^4.2.4"
 	}
 }
