--- a/backend/package.json
+++ b/backend/package.json
@@ -8,20 +8,19 @@
 	"license": "MIT",
 	"scripts": {
 		"develop": "ts-node-dev --ignore-watch node_modules --transpile-only src/index.ts",
-		"start": "NODE_ENV=production ts-node-dev --ignore-watch node_modules --transpile-only src/index.ts",
+		"start": "NODE_ENV=production node dist/index.js",
+        "build": "tsc",
 		"lint": "yarn eslint src"
 	},
 	"dependencies": {
-		"@types/express": "^4.17.11",
 		"axios": "^0.21.1",
 		"cors": "^2.8.5",
 		"dotenv": "^9.0.2",
 		"express": "^4.17.1",
-		"mysql2": "^2.2.5",
-        "ts-node": "^9.1.1",
-		"ts-node-dev": "^1.1.6"
+		"mysql2": "^2.2.5"
 	},
 	"devDependencies": {
+        "@types/express": "^4.17.11",
 		"@types/cors": "^2.8.10",
 		"@types/node": "^14.14.37",
 		"@typescript-eslint/eslint-plugin": "^4.21.0",
@@ -30,6 +29,8 @@
 		"eslint-config-prettier": "^8.1.0",
 		"eslint-plugin-prettier": "^3.3.1",
 		"prettier": "^2.2.1",
-		"typescript": "^4.2.4"
+		"typescript": "^4.2.4",
+        "ts-node": "^9.1.1",
+		"ts-node-dev": "^1.1.6"
 	}
 }
