--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -5,11 +5,11 @@
     // "lib": [],                                   /* Specify library files to be included in the compilation. */
      "allowJs": true,                             /* Allow javascript files to be compiled. */
      "checkJs": true,                             /* Report errors in .js files. */
-     "noEmit": true,                              /* Do not emit outputs. */
+     "outDir": "./dist",
 
     /* Strict Type-Checking Options */
-    "strict": false,                                 /* Enable all strict type-checking options. */
-    "noImplicitAny": true,                       /* Raise error on expressions and declarations with an implied 'any' type. */
+    "strict": true,                                 /* Enable all strict type-checking options. */
+    "noImplicitAny": false,                       /* Raise error on expressions and declarations with an implied 'any' type. */
     /* Module Resolution Options */
     //"baseUrl": "./",                             /* Base directory to resolve non-absolute module names. */
     // "paths": {},                                 /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
