--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,4 @@
 {
-	"type": "module",
 	"name": "backend",
 	"version": "1.0.0",
 	"description": "StartNet backend API",
@@ -9,7 +8,7 @@
 	"scripts": {
 		"develop": "ts-node-dev --ignore-watch node_modules --transpile-only src/index.ts",
 		"start": "NODE_ENV=production node dist/index.js",
-        "build": "tsc",
+		"build": "tsc",
 		"lint": "yarn eslint src"
 	},
 	"dependencies": {
@@ -20,8 +19,8 @@
 		"mysql2": "^2.2.5"
 	},
 	"devDependencies": {
-        "@types/express": "^4.17.11",
 		"@types/cors": "^2.8.10",
+		"@types/express": "^4.17.11",
 		"@types/node": "^14.14.37",
 		"@typescript-eslint/eslint-plugin": "^4.21.0",
 		"@typescript-eslint/parser": "^4.21.0",
@@ -29,8 +28,8 @@
 		"eslint-config-prettier": "^8.1.0",
 		"eslint-plugin-prettier": "^3.3.1",
 		"prettier": "^2.2.1",
-		"typescript": "^4.2.4",
-        "ts-node": "^9.1.1",
-		"ts-node-dev": "^1.1.6"
+		"ts-node": "^9.1.1",
+		"ts-node-dev": "^1.1.6",
+		"typescript": "^4.3.2"
 	}
 }
