add hashed password field

--- a/backend/package.json
+++ b/backend/package.json
@@ -13,12 +13,14 @@
 	},
 	"dependencies": {
 		"axios": "^0.21.1",
+		"bcrypt": "^5.0.1",
 		"cors": "^2.8.5",
 		"dotenv": "^9.0.2",
 		"express": "^4.17.1",
 		"mysql2": "^2.2.5"
 	},
 	"devDependencies": {
+		"@types/bcrypt": "^5.0.0",
 		"@types/cors": "^2.8.10",
 		"@types/express": "^4.17.11",
 		"@types/node": "^14.14.37",
